# internal/appmgrcli/disruption/close_disruption_responses.go
@@ -1,0 +1,172 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package disruption
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"encoding/json"
+	stderrors "errors"
+	"fmt"
+	"io"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/criteo/node-disruption-controller/internal/appmgr"
+)
+
+// CloseDisruptionReader is a Reader for the CloseDisruption structure.
+type CloseDisruptionReader struct {
+	formats strfmt.Registry
+}
+
+// ReadResponse reads a server response into the received o.
+func (o *CloseDisruptionReader) ReadResponse(response runtime.ClientResponse, consumer runtime.Consumer) (any, error) {
+	switch response.Code() {
+	case 200:
+		result := NewCloseDisruptionOK()
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		return result, nil
+	default:
+		result := NewCloseDisruptionDefault(response.Code())
+		if err := result.readResponse(response, consumer, o.formats); err != nil {
+			return nil, err
+		}
+		if response.Code()/100 == 2 {
+			return result, nil
+		}
+		return nil, result
+	}
+}
+
+// NewCloseDisruptionOK creates a CloseDisruptionOK with default headers values
+func NewCloseDisruptionOK() *CloseDisruptionOK {
+	return &CloseDisruptionOK{}
+}
+
+/*
+CloseDisruptionOK describes a response with status code 200, with default header values.
+
+Acknowledged.
+*/
+type CloseDisruptionOK struct {
+}
+
+// IsSuccess returns true when this close disruption o k response has a 2xx status code
+func (o *CloseDisruptionOK) IsSuccess() bool {
+	return true
+}
+
+// IsRedirect returns true when this close disruption o k response has a 3xx status code
+func (o *CloseDisruptionOK) IsRedirect() bool {
+	return false
+}
+
+// IsClientError returns true when this close disruption o k response has a 4xx status code
+func (o *CloseDisruptionOK) IsClientError() bool {
+	return false
+}
+
+// IsServerError returns true when this close disruption o k response has a 5xx status code
+func (o *CloseDisruptionOK) IsServerError() bool {
+	return false
+}
+
+// IsCode returns true when this close disruption o k response a status code equal to that given
+func (o *CloseDisruptionOK) IsCode(code int) bool {
+	return code == 200
+}
+
+// Code gets the status code for the close disruption o k response
+func (o *CloseDisruptionOK) Code() int {
+	return 200
+}
+
+func (o *CloseDisruptionOK) Error() string {
+	return fmt.Sprintf("[POST /close][%d] closeDisruptionOK", 200)
+}
+
+func (o *CloseDisruptionOK) String() string {
+	return fmt.Sprintf("[POST /close][%d] closeDisruptionOK", 200)
+}
+
+func (o *CloseDisruptionOK) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	return nil
+}
+
+// NewCloseDisruptionDefault creates a CloseDisruptionDefault with default headers values
+func NewCloseDisruptionDefault(code int) *CloseDisruptionDefault {
+	return &CloseDisruptionDefault{
+		_statusCode: code,
+	}
+}
+
+/*
+CloseDisruptionDefault describes a response with status code -1, with default header values.
+
+Unexpected error
+*/
+type CloseDisruptionDefault struct {
+	_statusCode int
+
+	Payload appmgr.Error
+}
+
+// IsSuccess returns true when this close disruption default response has a 2xx status code
+func (o *CloseDisruptionDefault) IsSuccess() bool {
+	return o._statusCode/100 == 2
+}
+
+// IsRedirect returns true when this close disruption default response has a 3xx status code
+func (o *CloseDisruptionDefault) IsRedirect() bool {
+	return o._statusCode/100 == 3
+}
+
+// IsClientError returns true when this close disruption default response has a 4xx status code
+func (o *CloseDisruptionDefault) IsClientError() bool {
+	return o._statusCode/100 == 4
+}
+
+// IsServerError returns true when this close disruption default response has a 5xx status code
+func (o *CloseDisruptionDefault) IsServerError() bool {
+	return o._statusCode/100 == 5
+}
+
+// IsCode returns true when this close disruption default response a status code equal to that given
+func (o *CloseDisruptionDefault) IsCode(code int) bool {
+	return o._statusCode == code
+}
+
+// Code gets the status code for the close disruption default response
+func (o *CloseDisruptionDefault) Code() int {
+	return o._statusCode
+}
+
+func (o *CloseDisruptionDefault) Error() string {
+	payload, _ := json.Marshal(o.Payload)
+	return fmt.Sprintf("[POST /close][%d] closeDisruption default %s", o._statusCode, payload)
+}
+
+func (o *CloseDisruptionDefault) String() string {
+	payload, _ := json.Marshal(o.Payload)
+	return fmt.Sprintf("[POST /close][%d] closeDisruption default %s", o._statusCode, payload)
+}
+
+func (o *CloseDisruptionDefault) GetPayload() appmgr.Error {
+	return o.Payload
+}
+
+func (o *CloseDisruptionDefault) readResponse(response runtime.ClientResponse, consumer runtime.Consumer, formats strfmt.Registry) error {
+
+	// response payload
+	if err := consumer.Consume(response.Body(), &o.Payload); err != nil && !stderrors.Is(err, io.EOF) {
+		return err
+	}
+
+	return nil
+}
